MFC r366853:

cxgbe(4): Fix page fault in t4_get_lb_stats with 2 port T5 cards.

PR:		250449
Reported by:	freqlabs@
Sponsored by:	Chelsio Communications